// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders correctly fill dark 1`] = `
<span>
  <div
    className="monday-style-label monday-style-label--kind-fill monday-style-label--color-dark monday-style-label--with-animation"
  >
    <span>
      Test
    </span>
    <span
      className="monday-style-label__leg-wrapper"
    />
  </div>
</span>
`;

exports[`Label renders correctly fill negative 1`] = `
<span>
  <div
    className="monday-style-label monday-style-label--kind-fill monday-style-label--color-negative monday-style-label--with-animation"
  >
    <span>
      Test
    </span>
    <span
      className="monday-style-label__leg-wrapper"
    />
  </div>
</span>
`;

exports[`Label renders correctly fill positive 1`] = `
<span>
  <div
    className="monday-style-label monday-style-label--kind-fill monday-style-label--color-positive monday-style-label--with-animation"
  >
    <span>
      Test
    </span>
    <span
      className="monday-style-label__leg-wrapper"
    />
  </div>
</span>
`;

exports[`Label renders correctly fill primary 1`] = `
<span>
  <div
    className="monday-style-label monday-style-label--kind-fill monday-style-label--color-primary monday-style-label--with-animation"
  >
    <span>
      Test
    </span>
    <span
      className="monday-style-label__leg-wrapper"
    />
  </div>
</span>
`;

exports[`Label renders correctly line dark 1`] = `
<span>
  <div
    className="monday-style-label monday-style-label--kind-line monday-style-label--color-dark monday-style-label--with-animation"
  >
    <span>
      Test
    </span>
    <span
      className="monday-style-label__leg-wrapper"
    />
  </div>
</span>
`;

exports[`Label renders correctly line negative 1`] = `
<span>
  <div
    className="monday-style-label monday-style-label--kind-line monday-style-label--color-negative monday-style-label--with-animation"
  >
    <span>
      Test
    </span>
    <span
      className="monday-style-label__leg-wrapper"
    />
  </div>
</span>
`;

exports[`Label renders correctly line positive 1`] = `
<span>
  <div
    className="monday-style-label monday-style-label--kind-line monday-style-label--color-positive monday-style-label--with-animation"
  >
    <span>
      Test
    </span>
    <span
      className="monday-style-label__leg-wrapper"
    />
  </div>
</span>
`;

exports[`Label renders correctly line primary 1`] = `
<span>
  <div
    className="monday-style-label monday-style-label--kind-line monday-style-label--color-primary monday-style-label--with-animation"
  >
    <span>
      Test
    </span>
    <span
      className="monday-style-label__leg-wrapper"
    />
  </div>
</span>
`;

exports[`Label renders correctly line with leg 1`] = `
<span>
  <div
    className="monday-style-label monday-style-label--kind-fill monday-style-label--color-primary monday-style-label--with-animation monday-style-label--with-leg"
  >
    <span>
      Test
    </span>
    <span
      className="monday-style-label__leg-wrapper"
    >
      <svg
        fill="none"
        height="5"
        viewBox="0 0 8 5"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0V2.76772C0 4.21783 1.77351 4.92116 2.76736 3.86519L5.45681 1.00765C6.06097 0.365738 6.90294 0.00127805 7.7843 3.35493e-06C5.30942 2.53165e-06 2.69058 1.4328e-06 0 0Z"
          fill="#E44258"
        />
      </svg>
    </span>
  </div>
</span>
`;

exports[`Label renders correctly line with wrapperClassName 1`] = `
<span
  className="test"
>
  <div
    className="monday-style-label monday-style-label--kind-fill monday-style-label--color-primary monday-style-label--with-animation"
  >
    <span>
      
    </span>
    <span
      className="monday-style-label__leg-wrapper"
    />
  </div>
</span>
`;

exports[`Label renders correctly line without animation 1`] = `
<span>
  <div
    className="monday-style-label monday-style-label--kind-fill monday-style-label--color-primary"
  >
    <span>
      Test
    </span>
    <span
      className="monday-style-label__leg-wrapper"
    />
  </div>
</span>
`;

exports[`Label renders correctly with empty props 1`] = `
<span>
  <div
    className="monday-style-label monday-style-label--kind-fill monday-style-label--color-primary monday-style-label--with-animation"
  >
    <span>
      
    </span>
    <span
      className="monday-style-label__leg-wrapper"
    />
  </div>
</span>
`;
